# pytorch-playground

./: pyproject.toml
src/pytorch_playground/: __init__.py  data_downloader.ipynb  fashion_mnist_classification.ipynb  hugging_face_exploration.ipynb  introduction.ipynb  lightning_introduction.ipynb  linear_model.ipynb  nonlinear_functions.ipynb  transfer_learning.ipynb
src/pytorch_playground/utils/: data_setup.py  model_builder.py  plotting.py  save_model.py  train.py  train_model.py
